Fix package.json, add ac api debug

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 
   "dependencies": {
     "coffee-script": "~1.6",
-    "node-activecollab": "git://github.com/mediasuitenz/node-activecollab.git",
+    "node-activecollab": "git://github.com/mediasuitenz/node-activecollab.git"
   },
   "devDependencies": {
     "mocha": "*",
